[package]
name = "agoltui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
agol = { path = "../agol" }
reqwest = {version = "0.13.1", features = ["form", "json", "query"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
futures = "0.3.32"
